# alias

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
ci/: Dockerfile-linux-clang  Dockerfile-linux-gcc  Dockerfile-win-buildtools
ci/linux-gcc/: Dockerfile
example/: breakout.c  cga2d.h  cga3d.h  pga2d.h  pga3d.h
include/: commutator_product.h
include/alias/: ash.h  color.h  cpp.h  ecs.h  lexer.h  log.h  math.h  memory.h  pga.h  physics.h  random.h  runtime_metrics.h  stackless.h  str.h  string32.h  transform.h  ui.h  uio.h  utils.h
include/alias/cpp/: arguments.h  boolean.h  cat.h  defer_eval.h  map.h  option.h  probe.h
include/alias/data_structure/: aabb.h  bvh.h  inline_list.h  paged_soa.h  soa.h  vector.h
include/alias/file_format/: image.h  qoi.h
include/alias/geometry/: aabb.h  bvh.h
include/alias/pga/: add.h  binary.h  bits.h  commutator_product.h  dual.h  gen_binary.h  geometric_product.h  inner_product.h  join.h  meet.h  negate.h  operators.h  outer_product.h  polarity.h  real.h  regressive_product.h  reverse.h  sandwich.h  select_grade.h  subtract.h  types.h  unary.h
src/: ash.c  color.c  ecs_archetype.c  ecs_component.c  ecs_entity.c  ecs_instance.c  ecs_layer.c  ecs_local.h  ecs_memory.c  ecs_query.c  ff_qoi.c  geometry_bvh.c  lexer.c  log.c  memory.c  pga.c  physics.c  physics_bvh_2d.c  physics_local.h  random.c  str.c  string32.c  transform.c  ui.c  utils_local.h
tabula/: CMakeLists.txt  format_conformance_test.c  test.c
tabula/doc/: dragonbox.txt
tabula/include/: tabula.h
tabula/src/: atoi.c  atoi.h  format.c  format.h  header.h  middle.h  static.c
tabula/test/: format_conformance_test.c
test/: ash.c  data_structure_paged_soa.c  data_structure_soa.c  ecs_add_component.c  ecs_component_set.c  ecs_create_component.c  ecs_create_instance.c  ecs_create_layer.c  ecs_internal_archetype.c  ecs_internal_bsearch.c  ecs_internal_sort.c  ecs_query.c  ecs_remove_component.c  ecs_spawn.c  geometry_aabb.c  geometry_bvh.c  lexer.c  local.h  main.c  pga2d.c  ui.c
tools/: CMakeLists.txt  gen_geometric_algebra.c
